@@ -1,3 +1,6 @@
+ssh-oscar-1.3 (not yet released):
+- Add the Debian support.
+
 ssh-oscar-1.2:
 - Include the patch from Ansgar Esztermann: in ssh-oscar.sh, checks for the
 existance of the home directory instead of entering into the home directory.
